--- a/src/main/res/menu/navigation.xml
+++ b/src/main/res/menu/navigation.xml
@@ -12,8 +12,12 @@
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_Map"
+        android:icon="@android:drawable/ic_dialog_map"
+        android:title="@string/title_Map" />
 
+    <item
+        android:id="@+id/navigation_TicketList"
+        android:icon="@android:drawable/btn_star_big_on"
+        android:title="@string/title_TicketList" />
 </menu>
