--- a/src/main/res/layout/activity_enter_employee_id.xml
+++ b/src/main/res/layout/activity_enter_employee_id.xml
@@ -28,6 +28,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:selectAllOnFocus="true"
         android:text="@string/CurrentEmployeeID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
