--- a/src/main/res/layout/activity_enter_employee_id.xml
+++ b/src/main/res/layout/activity_enter_employee_id.xml
@@ -45,5 +45,5 @@
         android:text="Send ID"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ID_entered" />
+        app:layout_constraintTop_toBottomOf="ID_entered" />
 </android.support.constraint.ConstraintLayout>
