--- a/src/main/res/values/base-strings.xml
+++ b/src/main/res/values/base-strings.xml
@@ -56,7 +56,7 @@
 
     <string name="app_name">TrashApp</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_current_ticket">Current Ticket</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_TicketList">Ticket List</string>
     <string name="title_Map">Map</string>
