--- a/src/main/res/layout/listview.xml
+++ b/src/main/res/layout/listview.xml
@@ -5,8 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textview"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </TextView>
+        android:layout_height="match_parent"></TextView>
 </LinearLayout>
