--- a/src/main/res/menu/navigation.xml
+++ b/src/main/res/menu/navigation.xml
@@ -7,9 +7,9 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_current_ticket"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_current_ticket" />
 
     <item
         android:id="@+id/navigation_Map"
