--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="grid_spacing">4dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
