--- a/src/main/res/layout/fragment_home_screen.xml
+++ b/src/main/res/layout/fragment_home_screen.xml
@@ -14,10 +14,18 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="Home Screen"
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="logoutEmployee"
+            android:text="Logout" />
+
     </LinearLayout>
 
 </FrameLayout>
