--- a/src/main/res/layout/fragment_ticket_list.xml
+++ b/src/main/res/layout/fragment_ticket_list.xml
@@ -14,14 +14,22 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="51dp"
+            android:layout_height="wrap_content"
             android:text="Ticket List"
             android:textAlignment="center"
             android:textSize="24sp" />
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="650dp" />
+
+        <Button
+            android:id="@+id/updateTicketListButton"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="120dp"
+            android:onClick="updateTicketList"
+            android:text="Update Ticket List" />
 
     </LinearLayout>
 
