--- a/src/main/res/layout/fragment_ticket_list.xml
+++ b/src/main/res/layout/fragment_ticket_list.xml
@@ -21,14 +21,19 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="650dp" />
+            android:layout_height="650dp"
+            android:layout_gravity="bottom"
+            android:clickable="true"
+            android:contextClickable="true"
+            android:divider="?attr/dividerHorizontal"
+            android:scrollIndicators="right" />
 
         <Button
             android:id="@+id/updateTicketListButton"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="120dp"
-            android:onClick="updateTicketList"
+            android:onClick="getTicketList"
             android:text="Update Ticket List" />
 
     </LinearLayout>
