improved current ticket view and ticket editor

--- a/src/main/res/layout/fragment_home_screen.xml
+++ b/src/main/res/layout/fragment_home_screen.xml
@@ -26,6 +26,24 @@
             android:onClick="logoutEmployee"
             android:text="Logout" />
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            android:text="Database Options"
+            android:textAlignment="center"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="130dp"
+            android:onClick="UploadToDatabase"
+            android:text="Save Tickets" />
+
     </LinearLayout>
 
 </FrameLayout>
