--- a/src/main/res/values/base-strings.xml
+++ b/src/main/res/values/base-strings.xml
@@ -60,6 +60,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_TicketList">Ticket List</string>
     <string name="title_Map">Map</string>
+    <string name="title_TicketEditor">Map</string>
     <string name="title_activity_get_employee_id">GetEmployeeID</string>
     <string name="CurrentEmployeeID">Current_Employee_ID</string>
     <string name="SpecialNote">Special_Note</string>
