code from wednesday group meeting

--- a/src/main/res/layout/fragment_ticket_list.xml
+++ b/src/main/res/layout/fragment_ticket_list.xml
@@ -20,6 +20,7 @@
             android:textSize="24sp" />
 
         <ListView
+            android:id="@+id/TicketList"
             android:layout_width="match_parent"
             android:layout_height="650dp"
             android:layout_gravity="bottom"
