--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#C6C4C6</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#02B142</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
