--- a/src/main/res/layout/fragment_map_view.xml
+++ b/src/main/res/layout/fragment_map_view.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapView">
+    tools:context=".MapFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/map"
         android:background="@color/colorPrimary"
         android:orientation="vertical">
 
@@ -18,6 +19,6 @@
             android:text="Map"
             android:textAlignment="center"
             android:textSize="24sp" />
-    </LinearLayout>
+    </com.google.android.gms.maps.MapView>
 
 </FrameLayout>
