--- a/src/main/res/layout/fragment_ticket_list.xml
+++ b/src/main/res/layout/fragment_ticket_list.xml
@@ -19,16 +19,8 @@
             android:textAlignment="center"
             android:textSize="24sp" />
 
-        <Button
-            android:id="@+id/updateTicketListButton"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="120dp"
-            android:onClick="getTicketList"
-            android:text="Update Ticket List" />
-
         <ListView
-            android:id="@+id/TicketList"
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -36,6 +28,14 @@
             android:contextClickable="true"
             android:divider="?attr/dividerHorizontal"
             android:scrollIndicators="right" />
+
+        <Button
+            android:id="@+id/updateTicketListButton"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="120dp"
+            android:onClick="getTicketList"
+            android:text="Update Ticket List" />
 
     </LinearLayout>
 
