--- a/src/main/res/layout/fragment_ticket_list.xml
+++ b/src/main/res/layout/fragment_ticket_list.xml
@@ -14,7 +14,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="51dp"
+            android:layout_height="match_parent"
             android:text="Ticket List"
             android:textAlignment="center"
             android:textSize="24sp" />
