--- a/src/main/res/layout/fragment_ticket_editor.xml
+++ b/src/main/res/layout/fragment_ticket_editor.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAccent"
             android:orientation="vertical"
             android:paddingBottom="50dp">
 
@@ -219,7 +219,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="100dp"
                 android:layout_marginTop="15dp"
-                android:background="@color/colorPrimaryDark"
+                android:background="@color/colorPrimary"
                 android:onClick="saveTicketInfo"
                 android:text="Save"
                 android:textSize="24sp" />
