--- a/src/main/res/layout/fragment_ticket_list.xml
+++ b/src/main/res/layout/fragment_ticket_list.xml
@@ -23,6 +23,8 @@
             android:id="@+id/switch1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="20dp"
             android:text="Show Completed Tickets" />
 
 
